--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,14 @@ set -g mode-keys vi
 
 bind b list-buffers  # list paste buffers
 
+set-option -g remain-on-exit on
+
+set -g @resurrect-processes 'ssh sshpass bash python3'
+
+set -g @resurrect-capture-pane-contents 'on'
+
 # List of plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
