--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,11 @@
 set -g mouse on
 
+set-option -sg escape-time 200
+
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',tmux-256color:RGB'
+set-option -g focus-events on
+
 # Change prefix key to CTRL+A. "C-" stands for CTRL, "M-" stands for ALT key
 set-option -g prefix C-a
 unbind-key C-b
@@ -29,7 +35,7 @@ set -g mode-keys vi
 
 bind b list-buffers  # list paste buffers
 
-set-option -g remain-on-exit on
+set-option -g remain-on-exit off
 
 set -g @resurrect-processes 'ssh sshpass bash python3'
 
@@ -44,3 +50,33 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
+
+# message text
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
