fix: for nvim  - so yank to sys clipboard work.
set-clipboard on

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@ set -g mouse on
 
 set-option -sg escape-time 200
 
+# must for 'yank to system clipboard' in nvim to work
+set -s set-clipboard on
+
 set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',tmux-256color:RGB'
 set-option -g focus-events on
