change: not exiting copy-mode after mouse selection

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,7 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 set -g mode-keys vi
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection -x
 
 bind b list-buffers  # list paste buffers
 
